[package]
name = "kora"
version = "0.1.0"
authors = ["KGRC"]
edition = "2018"

# cargo build
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "please_work"
path = "src/bin/please_work.rs"

[[bin]]
name = "full_staker"
path = "src/bin/full_staker.rs"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
merlin = "3.0.0"
rayon = "1.5.0"
byteorder = "1"
aes-gcm-siv = "0.10.2"
hmac = "0.10.1"
bytes = "0.5.6"
bincode = "1"
bit-vec = "0.6.3"
modinverse = "0.1.1"
polynomial-over-finite-prime-field = "0.3.1"
ahash = "0.7.4"
bimap = "0.6.1"

plumcast = { path = "plumcast_used" }
fibers = "0.1"
fibers_rpc = "0.3"
futures = "0.1"
clap = "2"
fibers_global = "0.1"
sloggers = "0.3"
slog = "2"
trackable = "0.2"
crossbeam = "0.8.1"

local_ipaddress = "0.1.3" # wouldn't be used in real code because they'd use global ip and port forwarding

eframe = "0.14.0" # Gives us egui, epi and web+native backends

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown
